# Bird-Species-Classification

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
models/: training_info.json  training_info.txt
src/: data_processing.py  gui.py  model_evaluation.py  model_training.py  prediction.py
src/notebooks/: bird-species-recognition-using-efficientnet.ipynb
